--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,7 @@
 
   <body>
     <%= yield %>
+
+    <p><%= link_to "All Posts", '/posts' %> | <%= link_to "All Destinations", '/destinations' %> | <%= link_to "All Bloggers", '/bloggers' %></p>
   </body>
 </html>
